hphp/test/quick/abstract_final_instantiation.php.expectf
Fatal error: Cannot instantiate abstract class Foo in %s/abstract_final_instantiation.php on line 6
